[package]
name = "todolist-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
axum = { version = "0.8.1", features = ["macros"] }
clap = "4.5.31"
dotenvy = "0.15.7"
serde = { version = "1.0.218", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
